Fixed 2 bugs: Search uppercase failure and loading button appearing on small lists

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,6 @@
 }
 
 .movieBlock:hover {
-  opacity: 50%;
+  opacity: .7;
   cursor: pointer;
 }
